--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/slider_publisher
-	previous = 
-	base = d1a31ad
+	previous = d1a31ad
+	base = 47adf7d
 	trim = 
 	trimbase = 
