--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/slider_publisher
-	previous = 
-	base = 71d8e87
+	previous = 71d8e87
+	base = 1b680d8
 	trim = 
 	trimbase = 
