--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/slider_publisher
-	previous = 
-	base = bf3fd6c
+	previous = bf3fd6c
+	base = f5488d7
 	trim = 
 	trimbase = 
